--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,13 @@ ARG ruby_version
 ENV LC_ALL C.UTF-8
 
 USER root
+RUN groupadd -r ned -g 1000 && \
+    useradd -u 1000 -r -g ned -m -s /sbin/nologin -c "Docker image user" ned && \
+    mkdir /home/ned/bin && \
+    mkdir /home/ned/src && \
+    chown -R ned:ned /home/ned
+
+WORKDIR /home/ned/src
 
 # Update Ubuntu Software repository && update deps
 RUN apt-get update && \
@@ -13,12 +20,6 @@ RUN apt-get update && \
      libreadline-dev \
      ragel && \
      rm -rf /var/lib/apt/lists/*
-
-RUN groupadd -r ned -g 1000 && \
-    useradd -u 1000 -r -g ned -m -s /sbin/nologin -c "Docker image user" ned && \
-    chown -R ned:ned /home/ned
-
-WORKDIR /home/ned/app
 
 USER ned
 
@@ -31,5 +32,7 @@ RUN \curl -sL https://github.com/rbenv/rbenv-installer/raw/master/bin/rbenv-inst
 # the specified ruby version
 RUN rbenv install $ruby_version && \
     rbenv global $ruby_version
+
+COPY --chown=ned:ned . /home/ned/src
 
 ENTRYPOINT ["docker/entrypoint"]
