--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,24 @@
 version: "3"
 services:
 
-  rb-2.6.3:
-    image: edn_turbo_image:rb-2.6.3
+  rb-2.7.0:
+    image: digressed/test:edn_turbo-rb-2.7.0
     stdin_open: true
     tty: true
-    volumes:
-      - /Volumes/homes/ep/work/edn_turbo:/home/ned/app
 
-  rb-2.4.2:
-    image: edn_turbo_image:rb-2.4.2
+  rb-2.6.5:
+    image: digressed/test:edn_turbo-rb-2.6.5
     stdin_open: true
     tty: true
-    volumes:
-      - /Volumes/homes/ep/work/edn_turbo:/home/ned/app
+
+  rb-2.5.7:
+    image: digressed/test:edn_turbo-rb-2.5.7
+    stdin_open: true
+    tty: true
+
+  rb-2.4.9:
+    image: digressed/test:edn_turbo-rb-2.4.9
+    stdin_open: true
+    tty: true
+    # volumes:
+    #   - /Volumes/homes/ep/work/edn_turbo:/home/ned/app
