--- a/docker/build
+++ b/docker/build
@@ -1,11 +1,11 @@
 #!/bin/bash
 
-if [ $# -eq 0 ]; then
-    RUBY_VERSION=2.7.0
-else
-    RUBY_VERSION=$1
-fi
+. docker/common.sh
 
 set -e
 
+set_ruby_ver $@
+
 docker build --build-arg ruby_version=$RUBY_VERSION -f docker/Dockerfile -t digressed/test:edn_turbo-rb-$RUBY_VERSION .
+docker tag "digressed/test:edn_turbo-rb-$RUBY_VERSION" "edn_turbo-rb-$RUBY_VERSION"
+docker push "digressed/test:edn_turbo-rb-$RUBY_VERSION"
